# endo

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  endo.cabal  stack-lts-5.4-transformers-0.5.2.0.yaml  stack-lts-5.4.yaml  stack-lts-5.5-transformers-0.5.2.0.yaml  stack-lts-5.5.yaml  stack-lts-9.yaml
example/: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Example5.hs  Example6.hs  Example7.hs
example/Example/: Config.hs
example/Example/Config/: Lens.hs  Setters.hs
src/Data/Monoid/: Endo.hs
src/Data/Monoid/Endo/: AnEndo.hs  Apply.hs  Fold.hs  FromEndo.hs
