name:                   endo
version:                0.1.0.0
synopsis:               Utilities for Endo data type.
description:
  TODO

homepage:               https://github.com/trskop/endo
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2013-2015 Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

-- Examples require lens package in addition to this packackage's dependencies.
-- When using sandbox it is possible to use "cabal repl" to test examples by
-- using following command:
--
--     cabal repl --ghc-options="-iexample -package lens"
extra-source-files:
    ChangeLog.md
  , README.md
  , example/Example/Config/*.hs
  , example/Example/*.hs
  , example/*.hs

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.Monoid.Endo
    , Data.Monoid.Endo.Fold

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , FlexibleInstances
    , NoImplicitPrelude
    , TypeFamilies

  build-depends:
      base >=4.6 && <4.8
    , transformers >=0.3 && <0.4

    , between == 0.9.*

  if impl(GHC >= 7.8)
    cpp-options:        -DHAVE_MINIMAL_PRAGMA
  if impl(GHC >= 7.9)
    cpp-options:        -DAPPLICATIVE_MONAD

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
--    -Werror
